Member card dark mode fixed.

--- a/src/components/people/FacultyItem.module.css
+++ b/src/components/people/FacultyItem.module.css
@@ -1,5 +1,6 @@
 .innerContainer {
-  background-color: var(--ifm-color-gray-100);
+  background-color: var(--ifm-color-emphasis-200);
+  border-radius: var(--ifm-global-radius);
   height: 100%;
 }
 
